# Typo

./: CMakeLists.txt  build.bat  generate_project.bat
python/: word_list_to_lowercase.py
resources/: scoreboard.txt  word_list_1.txt
src/: Timer.h  main.cpp
